# tipsydot-polkadot

./: .gitignore  .gitmodules  CLAUDE.md  hardhat.config.js
.github/workflows/: test.yml
tipsydot/: .env.testnet  .gitignore  ARCHITECTURE.md  DEPLOY.md  ECONOMICS.md  FINAL_CHECKLIST.md  NOTES.md  PLAN.md  PROGRESS.md  README.md  USDC_FLOW.md  chopsticks-config.yml  foundry.toml  hardhat.config.cjs  package-lock.json  package.json  pnpm-lock.yaml
tipsydot-demo/: .env.example  .env.local-chopsticks  .env.local-frontier  .env.local.example  .env.production  ARCHITECTURE.md  BUILD_STATUS.md  CONNECTION_GUIDE.md  DEMO_READY.md  DEMO_SCRIPT.md  Dockerfile  IMPLEMENTATION.md  INK_FRONTEND_INTEGRATION.md  INK_MIGRATION_PLAN.md  OMNINODE_MIGRATION_PLAN.md  POLKADOT_STACK_SETUP.md  PROGRESS.md  README.md  REVIVE_CLARIFICATION.md  XCM_IMPLEMENTATION.md  chopsticks-assethub.yml  chopsticks-config.yml  chopsticks-relay.yml  chopsticks.yml  deployment.json  hardhat.config.js  hardhat.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pop.toml  vitest.config.ts  zombienet-paseo.toml  zombienet.toml
tipsydot-demo/app/: page.tsx
tipsydot-demo/components/: BuilderSelector.tsx  DonateButton.tsx  GetUSDCButton.tsx  PapiMonitor.tsx  TransactionModal.tsx  site-header.tsx
tipsydot-demo/components/landing/: cta-section.tsx  pricing-section.tsx
tipsydot-demo/contracts/: MockUSDC.sol  SecureXCMDonation.sol  SimpleTipping.sol  USDCDonation.sol  USDCDonationWithPrecompile.sol  USDCFaucet.sol  XCMDonation.sol
tipsydot-demo/deployments/: frontier.json
tipsydot-demo/hooks/: useUnifiedContract.ts
tipsydot-demo/ink-contracts/: Cargo.toml  README.md  REVIVE_COMPATIBILITY.md  TEST_RESULTS.md  build.sh  deploy-to-revive.js  test.sh
tipsydot-demo/ink-contracts/cross_chain/: Cargo.toml  lib.rs
tipsydot-demo/ink-contracts/examples/: cross_contract_calls.md
tipsydot-demo/ink-contracts/psp22_usdc/: Cargo.toml  lib.rs
tipsydot-demo/ink-contracts/simple_test/: Cargo.toml  lib.rs
tipsydot-demo/ink-contracts/tests/: integration_tests.rs  property_tests.rs
tipsydot-demo/ink-contracts/tipping/: Cargo.toml  lib.rs
tipsydot-demo/ink-contracts/tipping_compatible/: Cargo.toml  lib.rs
tipsydot-demo/ink-contracts/tipping_v6/: Cargo.toml  lib.rs  tests.rs
tipsydot-demo/lib/: config.ts  papi-client.ts  wagmi-config.ts
tipsydot-demo/lib/contracts/: evm-adapter.ts  ink-adapter.ts  unified-interface.ts
tipsydot-demo/scripts/: build-omninode.sh  compile-simple.mjs  compile.mjs  create-chain-spec.sh  deploy-simple.mjs  deploy-tipping.mjs  deploy-to-frontier.mjs  deploy-to-native.js  deploy.js  deploy.mjs  fund-wallets.js  monitor-builds.sh  pop-deploy.sh  setup-xcm-channels.js  start-dev-with-paseo.sh  start-local.sh  start-native-evm.sh  start-omninode.sh  start-paseo-demo.sh  start-passethub.sh  start-polkadot-native.sh  start-polkadot-stack.sh  start-production-frontend.sh  start-revive-passethub.sh  start-xcm-local.sh  start-zombienet.sh  test-donation-flow.mjs  test-tipping.mjs
tipsydot-demo/specs/: passethub-local.json
tipsydot-demo/tests/: setup.ts
tipsydot-demo/tests/e2e/: tipping.spec.ts
tipsydot-demo/tests/integration/: unified-contract.test.ts
tipsydot-demo/tipsydot-demo/scripts/: deploy.cjs
tipsydot/.papi/: polkadot-api.json
tipsydot/.papi/descriptors/: package.json
tipsydot/artifacts/build-info/: solc-0_8_20-3ce320d05f863e6cfea8115269dc3cbb05a0bb58.json  solc-0_8_20-3ce320d05f863e6cfea8115269dc3cbb05a0bb58.output.json  solc-0_8_20-4450347bc3500c408bf7d63b23f6763560f88769.json  (+5 more)
tipsydot/cache/: compile-cache.json  solidity-files-cache.json  test-failures
tipsydot/contracts/: FaucetToken.sol  MockUSDC.sol  TipsyDot.sol  TipsyDotNFT.sol  TipsyDotV2.sol  TipsyDotV3.sol  TipsyDotV4.sol  TipsyDotV5.sol  USDP.sol  USDPBridge.sol  USDPSwap.sol
tipsydot/docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  JUDGES_SUMMARY.md  NOTES.md  PAPI_INTEGRATION.md  presentation.md
tipsydot/script/: DeployForTest.s.sol
tipsydot/scripts/: approve-usdc.sh  deploy-faucet.sh  deploy-nft.sh  deploy-testnet.sh  deploy-usdp.sh  deploy-v4.sh  deploy.sh  interact.sh  mint-usdc-chopsticks.js  setup-omninode.sh  start-chopsticks.sh
tipsydot/src/: App.tsx  index.css  main.tsx  reactive-dot.ts
tipsydot/test/: TipsyDotV3.t.sol  TipsyDotV3Security.t.sol  TipsyDotV4.t.sol
tipsydot/test-results/: .last-run.json
tipsydot/tests/: tipsydot.spec.ts
(+47 files in other folders)
