[package]
name = "cross_chain"
version = "1.0.0"
authors = ["TipsyDot Team"]
edition = "2021"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
openbrush = { workspace = true, features = ["ownable"] }

# XCM support (removed for now - will add back when needed)

[dev-dependencies]
ink_e2e = { version = "5.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []