[package]
name = "tipping_compatible"
version = "1.0.0"
authors = ["TipsyDot Team"]
edition = "2021"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
ethabi = { workspace = true }
primitive-types = { workspace = true }
hex = { workspace = true }

# For cross-contract calls
ink_env = { version = "5.0", default-features = false }
ink_prelude = { version = "5.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "ethabi/std",
    "primitive-types/std",
    "hex/std",
    "ink_env/std",
    "ink_prelude/std",
]
ink-as-dependency = []
e2e-tests = []